<resources>
    <string name="app_name">Composition</string>
    <string name="description">Rules of the game: there are three figures in front of you, two from below and one from above. It is necessary that the sum of the numbers below be equal to the number in the upper figure.</string>
    <string name="title">Number Composition</string>
    <string name="ok">OK</string>
    <string name="logo">logo</string>
    <string name="choose_the_level">Choose the level:</string>
    <string name="test">TEST</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="timer">00:00</string>
    <string name="sum">10</string>
    <string name="right_answers">Right answers: %s</string>
    <string name="try_again">Try again</string>
    <string name="required_number_of_correct_answers_s">Required number of correct answers: %s</string>
    <string name="required_percentage_of_correct_answers_s">Required percentage of correct answers: %s</string>
    <string name="your_score_s">Your score: %s</string>
    <string name="percentage_of_correct_answers_s">Percentage of correct answers: %s</string>
    <string name="success_image">success image</string>
</resources>