<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/tv_choose_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/choose_the_level"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/test"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_easy"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/btn_easy"
            android:text="@string/easy"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/btn_normal"
            android:text="@string/normal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/btn_hard"
            android:text="@string/hard"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>